--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   cloud_firestore: ^5.4.4
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
+  google_sign_in: ^6.2.1
+  flutter_facebook_auth: ^7.1.1
+  firebase_auth: ^5.3.1
 
 dev_dependencies:
   flutter_test:
